# march_madness

./: .gitignore  ARCHITECTURE.md  FEATURES.md  README.md  ai_assistant_guide.md  efficiency_log.txt  mkdocs.yml  pyproject.toml  requirements.txt  run_pipeline.py  run_transforms.py  schema_check.py  temp_schema_analysis.py  validate_data.py
.cursor/rules/: adding_features_and_models.mdc  code_conventions.mdc  coding_standards.mdc  configuration_standards.mdc  data_sources.mdc  eda_script_structure.mdc  performance_optimization.mdc  pipeline_workflow.mdc  pr_preparation.mdc  project_overview.mdc  project_structure.mdc  testing_and_ci.mdc  troubleshooting.mdc  visualization_standards.mdc
.github/workflows/: badges.yml  docs.yml  run_pipeline.yml  test.yml
config/: pipeline_config.yaml
data/: README.md
data/static/: espn_teams.json
docs/: PRINCIPLES.md  README.md  ai_assistant_guide.md  data_processing.md  index.md  team_master_stage.md
docs/data/: index.md
docs/developer_guide/: README.md  ai_assistant_guide.md  documentation_guide.md  eda_guide.md  extending.md  feature_structure.md
docs/features/: foundation.md  index.md  migration_summary.md
docs/guides/: development_workflow.md  feature_creation.md  task_writing_guide.md
docs/pipeline/: README.md  index.md  overview.md
docs/reference/: README.md
docs/standards/: doc_standards.md  project_management_standards.md  testing_standards.md
docs/templates/: feature_documentation_template.md  github_issue_template.md  pull_request_template.md
docs/user_guide/: README.md  configuration.md  getting_started.md  installation.md  pipeline_usage.md  working_with_data.md
examples/: data_download_example.py  pipeline_usage_example.py  validate_example.py
notebooks/: regular_vs_tournament_analysis.ipynb
tests/: __init__.py  conftest.py  test_cleaner.py  test_data.py  test_pipeline_data_stage.py  test_transformer.py
(+126 files in other folders)
