[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "march_madness"
version = "0.1.0"
description = "NCAA March Madness Predictor"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tim McDonnell"}
]
dependencies = [
    "dash>=2.18.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "nbformat>=5.10.4",
    "nbval>=0.11.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.23.0",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.9.9",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "black>=24.2.0",
    "pre-commit>=3.6.2",
    "mypy>=1.15.0",
    "ruff>=0.9.9",
    "nbval>=0.11.0",
]

[project.urls]
"Homepage" = "https://github.com/tim-mcdonnell/march_madness"
"Bug Tracker" = "https://github.com/tim-mcdonnell/march_madness/issues"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
select = ["E", "F", "B", "I", "N", "UP", "ANN", "S", "A", "C4", "T10", "RET"]
ignore = ["ANN101"]  # Missing type annotation for `self`

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.pytest.cov]
source = ["src"]
omit = ["tests/*"] 